--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,6 +130,10 @@ main {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  background-image: url("../images/zen.JPG");
+  background-size: cover;
+  background-repeat: round;
+  opacity: 0.09;
 }
 
 #next {
